<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactDB.Labb4</string>
    <string name="action_bar_start">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <!--Dialog-->
    <string name="dialog_message">Delete Contact</string>
    <string name="dialog_title">Are you sure you want to delete the contact?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!--Edit Contact-->
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_remove">Remove</string>
    <string name="edit_contact_btn_label">Edit Contact</string>
    <!--Add contact-->
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="edittext_name_placeholder">Name</string>
    <string name="edittext_age_placeholder">Age</string>
    <string name="edittext_imgurl_placeholder">Image link</string>
    <string name="edittext_description_placeholder">Description</string>
    <string name="add_contact_btn_label">Add Contact</string>
    <string name="sortContacts">Sort on Name</string>

</resources>
