<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.bachstatter.labb3contactlist.Activities.EditContactActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_add_contact"
        android:id="@+id/addContactHeadline"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edittext_name_placeholder"
        android:id="@+id/editTextName"
        android:layout_below="@+id/addContactHeadline"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/editTextImgUrl"
        android:hint="@string/edittext_imgurl_placeholder"
        android:layout_below="@+id/editTextAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextAge"
        android:layout_alignEnd="@+id/editTextAge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/edittext_age_placeholder"
        android:id="@+id/editTextAge"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDescription"
        android:hint="@string/edittext_description_placeholder"
        android:layout_below="@+id/editTextImgUrl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/addContactBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_btn_label"
        android:id="@+id/addContactBtn"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact_btn_label"
        android:id="@+id/editContactBtn"
        android:visibility="gone"
        android:layout_below="@+id/editTextDescription"
        android:layout_alignParentLeft="true"

        />
</RelativeLayout>